--- a/FinancialManager/FinancialManager/Storyboards/Operations.storyboard
+++ b/FinancialManager/FinancialManager/Storyboards/Operations.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,15 +15,107 @@
                     <view key="view" contentMode="scaleToFill" id="DzQ-hs-d1w">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bW5-zZ-b3p">
+                                <rect key="frame" x="0.0" y="44" width="414" height="116.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Despesas Totais" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5kY-JE-cSY">
+                                        <rect key="frame" x="15" y="10" width="333" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                                        <color key="textColor" systemColor="systemGray5Color"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oar-Re-c9S">
+                                        <rect key="frame" x="373.5" y="66" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="2bK-Un-v8z"/>
+                                            <constraint firstAttribute="width" constant="20" id="sKc-Is-zUJ"/>
+                                        </constraints>
+                                        <state key="normal" image="mais3"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 230,76" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="h3t-3Y-04R">
+                                        <rect key="frame" x="15" y="41.5" width="207" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                        <color key="textColor" systemColor="systemGray5Color"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="cara" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QN-4w-oG4">
+                                        <rect key="frame" x="363" y="10" width="41" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="2QN-4w-oG4" secondAttribute="height" multiplier="1:1" id="cLd-XQ-cns"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.050980392156862744" green="0.050980392156862744" blue="0.050980392156862744" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="oar-Re-c9S" firstAttribute="centerX" secondItem="2QN-4w-oG4" secondAttribute="centerX" id="0Ux-NP-Duv"/>
+                                    <constraint firstItem="2QN-4w-oG4" firstAttribute="height" secondItem="bW5-zZ-b3p" secondAttribute="height" multiplier="0.35" id="6we-1h-Ueg"/>
+                                    <constraint firstItem="h3t-3Y-04R" firstAttribute="width" secondItem="bW5-zZ-b3p" secondAttribute="width" multiplier="0.5" id="7D4-Qd-jTr"/>
+                                    <constraint firstAttribute="trailing" secondItem="2QN-4w-oG4" secondAttribute="trailing" constant="10" id="8mx-MN-sha"/>
+                                    <constraint firstItem="5kY-JE-cSY" firstAttribute="leading" secondItem="bW5-zZ-b3p" secondAttribute="leading" constant="15" id="9nU-h3-8e9"/>
+                                    <constraint firstItem="oar-Re-c9S" firstAttribute="top" secondItem="2QN-4w-oG4" secondAttribute="bottom" multiplier="1.1" constant="10" id="LnG-XK-jZw"/>
+                                    <constraint firstItem="h3t-3Y-04R" firstAttribute="leading" secondItem="bW5-zZ-b3p" secondAttribute="leading" constant="15" id="OCT-Rq-yM0"/>
+                                    <constraint firstItem="2QN-4w-oG4" firstAttribute="leading" secondItem="5kY-JE-cSY" secondAttribute="trailing" constant="15" id="ZcC-Qd-jyg"/>
+                                    <constraint firstItem="2QN-4w-oG4" firstAttribute="top" secondItem="bW5-zZ-b3p" secondAttribute="top" constant="10" id="bfJ-9x-DKs"/>
+                                    <constraint firstItem="5kY-JE-cSY" firstAttribute="top" secondItem="bW5-zZ-b3p" secondAttribute="top" constant="10" id="eia-jm-Pci"/>
+                                    <constraint firstItem="h3t-3Y-04R" firstAttribute="top" secondItem="5kY-JE-cSY" secondAttribute="bottom" constant="12" id="tnE-sK-pGx"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="LTK-cf-Lcc">
+                                <rect key="frame" x="0.0" y="160.5" width="414" height="47.5"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <segments>
+                                    <segment title="Despesas"/>
+                                    <segment title="Receitas"/>
+                                </segments>
+                                <color key="selectedSegmentTintColor" red="0.92156862745098034" green="0.51764705882352935" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gnh-du-Chu">
+                                <rect key="frame" x="0.0" y="212" width="414" height="601"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="4f3-G0-Ag4"/>
-                        <color key="backgroundColor" red="0.6915041250946159" green="0.98986064754401326" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.050980392159999999" green="0.050980392159999999" blue="0.050980392159999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bW5-zZ-b3p" firstAttribute="trailing" secondItem="4f3-G0-Ag4" secondAttribute="trailing" id="10D-42-XAf"/>
+                            <constraint firstItem="bW5-zZ-b3p" firstAttribute="leading" secondItem="4f3-G0-Ag4" secondAttribute="leading" id="DbR-aB-vxz"/>
+                            <constraint firstItem="Gnh-du-Chu" firstAttribute="leading" secondItem="4f3-G0-Ag4" secondAttribute="leading" id="DzY-Ub-Xcz"/>
+                            <constraint firstItem="LTK-cf-Lcc" firstAttribute="trailing" secondItem="4f3-G0-Ag4" secondAttribute="trailing" id="EVu-AS-st6"/>
+                            <constraint firstItem="4f3-G0-Ag4" firstAttribute="bottom" secondItem="Gnh-du-Chu" secondAttribute="bottom" id="OLo-so-7a7"/>
+                            <constraint firstItem="bW5-zZ-b3p" firstAttribute="height" secondItem="DzQ-hs-d1w" secondAttribute="height" multiplier="0.13" id="Tqo-xP-vgi"/>
+                            <constraint firstItem="Gnh-du-Chu" firstAttribute="top" secondItem="LTK-cf-Lcc" secondAttribute="bottom" constant="5" id="Ynv-qs-H1S"/>
+                            <constraint firstItem="Gnh-du-Chu" firstAttribute="trailing" secondItem="4f3-G0-Ag4" secondAttribute="trailing" id="ZIl-To-D82"/>
+                            <constraint firstItem="LTK-cf-Lcc" firstAttribute="leading" secondItem="4f3-G0-Ag4" secondAttribute="leading" id="oYc-Ea-Wxu"/>
+                            <constraint firstItem="LTK-cf-Lcc" firstAttribute="top" secondItem="bW5-zZ-b3p" secondAttribute="bottom" id="pf1-oI-BE1"/>
+                            <constraint firstItem="bW5-zZ-b3p" firstAttribute="top" secondItem="4f3-G0-Ag4" secondAttribute="top" id="rfA-zb-aNu"/>
+                            <constraint firstItem="LTK-cf-Lcc" firstAttribute="height" secondItem="bW5-zZ-b3p" secondAttribute="height" multiplier="0.4" id="tbz-iS-Dl4"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Principal" id="Hgm-Vz-MR5"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="amountOperation" destination="h3t-3Y-04R" id="6Qe-HI-GuC"/>
+                        <outlet property="newOperation" destination="oar-Re-c9S" id="Nlg-HF-X4g"/>
+                        <outlet property="operationsTable" destination="Gnh-du-Chu" id="yd5-aA-2MO"/>
+                        <outlet property="profileIcon" destination="2QN-4w-oG4" id="Hed-Yg-9iU"/>
+                        <outlet property="segmentedOperation" destination="LTK-cf-Lcc" id="r2o-xt-rZ4"/>
+                        <outlet property="titleOperation" destination="5kY-JE-cSY" id="NJr-HS-1oj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNz-uZ-XdU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-309" y="123"/>
+            <point key="canvasLocation" x="-310.14492753623193" y="122.54464285714285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cara" width="64" height="64"/>
+        <image name="mais3" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
