--- a/FinancialManager/FinancialManager/Storyboards/Operations.storyboard
+++ b/FinancialManager/FinancialManager/Storyboards/Operations.storyboard
@@ -32,6 +32,9 @@
                                             <constraint firstAttribute="width" constant="20" id="sKc-Is-zUJ"/>
                                         </constraints>
                                         <state key="normal" image="mais3"/>
+                                        <connections>
+                                            <action selector="addNewOperation:" destination="ncc-JM-e1t" eventType="touchUpInside" id="rQw-1j-HDe"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 230,76" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="h3t-3Y-04R">
                                         <rect key="frame" x="15" y="41.5" width="207" height="30"/>
