--- a/FinancialManager/FinancialManager/Storyboards/EditOperation.storyboard
+++ b/FinancialManager/FinancialManager/Storyboards/EditOperation.storyboard
@@ -104,13 +104,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="8r6-ec-Hjx">
                         <barButtonItem key="leftBarButtonItem" title="Cancelar" id="42B-sf-ilO">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="cancelEdition:" destination="dqv-2Y-2Pg" id="KSN-lh-Xhu"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Salvar" id="VTr-ds-iwQ">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="saveEdition:" destination="dqv-2Y-2Pg" id="InN-nG-FFz"/>
                             </connections>
@@ -138,7 +138,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
